--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Клушавель! HTML</title>
+    <title>Клушавель!</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
