--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
   <body>
 
     <main>
-      <a href="https://htmlacademy.ru">
-        <img src="img/bane.svg" width="300" height="300" alt="HTML Academy">
-      </a>
-
-      <h1>Клушинская горка</h1>
+      <h1 style="text-align:center;color:blue;">Клушинская горка</h1>
 
       <p>
           
