--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
   <body>
 
     <main>
-      <h1 style="text-align:center;color:blue;">Клушинская горка</h1>
+      <h1><div style="text-align:center;color:blue;">Клушинская горка</div></h1>
 
       <p>
           
         <a href="https://tv.ivideon.com/camera/100-9Acm4c7jCmVRhDzow3zPlt/0/?lang=ru">
-         !!!!!!!!!!!!!!!!!!!!!<BR> 
     
           <div class="iv-embed" style="margin:0 auto;padding:0;border:0;width:642px;">
             <div class="iv-v" style="display:block;margin:0;padding:1px;border:0;background:#000;">
