--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
 
     <main>
         <div class="nav" style="width:16%;text-align: right; transform: rotate(-15deg) translateY(10%); ">
-            <p><a href="./img/k0.jpg"><img src="./img/k1.jpg" alt="К" style="width:80%;" /></a></p>
+            <p><a href="https://drive.google.com/file/d/1tPiwjMgZ1thN7TH58rJ7oqo7on_WHZHo/view?usp=sharing"><img src="./img/k1.jpg" alt="К" style="width:80%;" /></a></p>
         </div>
         <div class="nav" style="transform: rotate(-5deg) translateY(0%)";>
-            <p><a href="./img/l0.jpg"><img src="./img/l1.jpg" alt="л"/></a></p>
+            <p><a href="https://drive.google.com/file/d/1-Om21kO0DPYlBb4VeT9tLpgM4gOH-UZk/view?usp=sharing"><img src="./img/l1.jpg" alt="л"/></a></p>
         </div>
         <div class="nav"style="transform: rotate(0deg) translateY(0%)";>
-            <p><a href="./img/u0.jpg"><img src="./img/u1.jpg" alt="у"/></a></p>
+            <p><a href="https://drive.google.com/file/d/1tXt4D3NDcBXmRufpSU5nEnRdpbLQHOFN/view?usp=sharing"><img src="./img/u1.jpg" alt="у"/></a></p>
         </div>
         <div class="nav"style="transform: rotate(5deg) translateY(0%)";>
-            <p><a href="./img/s0.jpg"><img src="./img/s1.jpg" alt="ш"/></a></p>
+            <p><a href="https://drive.google.com/file/d/1L_GWFSE-Yw_1L6dGV_9Jsxj8Qb8QMx3v/view?usp=sharing"><img src="./img/s1.jpg" alt="ш"/></a></p>
         </div>
         <div class="nav"style="transform: rotate(-5deg) translateY(10%)";>
-            <p><a href="./img/a0.jpg"><img src="./img/a1.jpg" alt="а"/></a></p>
+            <p><a href="https://drive.google.com/file/d/1kBSEXVgPVVDXv5luAAdZj3-L0tRsR04m/view?usp=sharing"><img src="./img/a1.jpg" alt="а"/></a></p>
         </div>
       <h1><div style="text-align:center;color:orangered;">Клушинская горка</div></h1>
 
