--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
     </style>
   </head>
-  <body style="background: linear-gradient(to top, white, dodgerblue);">
+  <body style="background: linear-gradient(to top, white, dodgerblue) no-repeat;height: 100%;">
 
     <main>
         <div class="nav" style="width:16%;text-align: right; transform: rotate(-15deg) translateY(10%); ">
