--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
         </div>
       <h1><div style="text-align:center;color:orangered;">Клушинская горка</div></h1>
       <a  target="_blank" href="https://www.ucloudcam.com/device/player?deviceId=xxxxS_0ccf89bd63ca" >
-      <h2 style="text-align: center;">
+      <h1 style="text-align: center;">
         Для просмотра видео <br>с камеры на склоне<br>
         
           откройте ссылку. 
 
         <br>Введите <br>'Login' - 'klushawell@mail.ru'<br> Пароль - 'Klusha1'
 
-      </h2>
+      </h1>
     </a>
 <br><br>
 <p style="text-align: center;">
-
-  <input type="button" onclick="window.location.href = 'https://telegram.im/@kluhawell';" value="Чат в Telegram"/>
-
+  <h1>
+  <input type="button" onclick="window.location.href = 'https://telegram.im/@kluhawell';" style="font-size : 40px; width: 100%; height: 100px; color:darkblue" value="Чат в Telegram"/>
+</h1>
 </p>
 </main>
 
