--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     </a>
 <br><br>
 <p style="text-align: center;">
-  <h1>
-  <input type="button" onclick="window.location.href = 'https://telegram.im/@kluhawell';" style="font-size : 40px; width: 100%; height: 100px; color:darkblue" value="Чат в Telegram"/>
+  <h1 style="text-align: center;">
+  <input type="button" onclick="window.location.href = 'https://telegram.im/@kluhawell';" style="font-size : 40px;  height: 100px; color:darkblue; border-radius: 50px;" value="    Чат в Telegram    "/>
 </h1>
 </p>
 </main>
